Fix invite modal autocomplete clipping

--- a/webapp/channels/src/components/invitation_modal/invitation_modal.scss
+++ b/webapp/channels/src/components/invitation_modal/invitation_modal.scss
@@ -16,7 +16,7 @@
     }
 
     .modal-content {
-        overflow: hidden;
+        overflow-x: hidden;
         max-width: 100%;
     }
 
